--- a/FleetManager.MAUI/Pages/Index.razor.css
+++ b/FleetManager.MAUI/Pages/Index.razor.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    height: 100vh;
+    height: 100%;
     grid-template-areas:
         "map map map map map"
         "map map map map map"
@@ -15,4 +15,17 @@
 .dashboard__mapWrapper {
     height: 100%;
     grid-area: map;
+}
+
+.dashboard__calendarWrapper {
+    height: 100%;
+    grid-area: calendarwidget;
+    background-color: lavender;
+    display: inline-block;
+}
+
+.dashboard__listWrapper {
+    height: 100%;
+    grid-area: listwidget;
+    display: inline-block;
 }
