--- a/FleetManager.MAUI/wwwroot/css/app.css
+++ b/FleetManager.MAUI/wwwroot/css/app.css
@@ -4,6 +4,12 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+*, *::after, *::before {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
 h1:focus {
     outline: none;
 }
@@ -19,7 +25,7 @@ a, .btn-link {
 }
 
 .content {
-    padding-top: 1.1rem;
+    height: 100vh;
 }
 
 .valid.modified:not([type=checkbox]) {
