--- a/FleetManager.MAUI/Pages/Index.razor
+++ b/FleetManager.MAUI/Pages/Index.razor
@@ -3,13 +3,13 @@
 
 
 <div id="dashboard" class="dashboard">
-    <div class="dashboard__mapWrapper">
+    <div class="dashboard__widget dashboard__mapWrapper">
         <MapComponent />
     </div>
-        <div class="dashboard__calendarWrapper">
+        <div class="dashboard__widget dashboard__calendarWrapper">
 
         </div>
-        <div class="dashboard__listWrapper">
+        <div class="dashboard__widget dashboard__listWrapper">
             <YachtList Yachts=@Yachts />
         </div>
 </div>
