cleanup, add fly to selected yacht

--- a/FleetManager.MAUI/Pages/Index.razor
+++ b/FleetManager.MAUI/Pages/Index.razor
@@ -10,6 +10,6 @@
 
         </div>
         <div class="dashboard__widget dashboard__listWrapper">
-            <YachtList Yachts=@Yachts />
+            <YachtList Yachts=@Yachts OnYachtSelected="YachtSelected" />
         </div>
 </div>
