Redesign fleet overview widget

--- a/FleetManager.MAUI/Components/Dashboard/YachtList.razor.css
+++ b/FleetManager.MAUI/Components/Dashboard/YachtList.razor.css
@@ -9,19 +9,31 @@
 
 .YachtList__wrapper {
     list-style: none;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: 1.5rem;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .YachtList__item {
-    border-bottom: 1px solid #f4f4f4;
-    border-top: 1px solid #f4f4f4;
+    box-sizing: border-box;
+    padding: 1.5rem 1rem;
+    width: 25%;
+    flex: 40%;
+    background-color: #778da9;
+    border: solid 2px #415a77;
+    border-radius: 16px;
     display: flex;
     align-items: center;
     justify-content: start;
-    padding: .5rem 0;
 }
 
 .YachtList__item--active {
-    font-weight: bold;
+    background-color: #415a77;
+    border: solid 2px #778da9;
 }
 
 .YachtList__itemIcon {
