Improve map component, add hover effect to overview widget

--- a/BlazorLeafletMap/MapComponent.razor
+++ b/BlazorLeafletMap/MapComponent.razor
@@ -1,3 +1,3 @@
-﻿<div class="map-component">
+﻿<div @attributes="AdditionalAttributes" class="@CssClass" style="@BackgroundColor">
     <div id="map" />
 </div>
