--- a/BlazorLeafletMap/MapComponent.razor.css
+++ b/BlazorLeafletMap/MapComponent.razor.css
@@ -1,10 +1,20 @@
-﻿.map-component {
+﻿.map {
     min-height: 100%;
     height: 100%;
-    border: 2px dashed red;
     padding: 1em;
     margin: 1em 0;
-    background-image: url('background.png');
+}
+
+.map--backgroundDefault {
+    background-color: lightblue;
+}
+
+.map--rounded {
+    border-radius: 16px;
+}
+
+.map--rounded #map {
+    border-radius: 8px;
 }
 
 #map {
