--- a/FleetManager.MAUI/Pages/Index.razor
+++ b/FleetManager.MAUI/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <div id="dashboard" class="dashboard">
     <div class="dashboard__widget dashboard__mapWrapper">
-        <MapComponent />
+        <MapComponent BackgroundColor="#aed9e0" IsRounded="true" />
     </div>
         <div class="dashboard__widget dashboard__listWrapper">
             <YachtList Yachts=@Yachts OnYachtSelected="YachtSelected" />
